--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "recharts": "^3.0.2",
@@ -53,6 +54,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
